tests/negative/resource_public_param_leak.ora
resource TokenUnit = u256;

contract ResourcePublicParamLeak {
    pub fn expose(place: Resource<TokenUnit>) {}
}
